albums so far look OK

--- a/PSS/Pages/AlbumsMain.razor
+++ b/PSS/Pages/AlbumsMain.razor
@@ -9,8 +9,8 @@
         <div class="album"> @*Text and album thumbnail*@
             <div class="thumbnail"> @*img and 3 dots*@
                 <img src="@PSS.Settings.requestPath/@album.albumCover" alt=""/>
-                <span class="albumName"></span>
             </div>
+            <span class="albumName">@album.name</span>
         </div>
     }
 </div>
