--- a/PSS/wwwroot/css/AlbumsMain.css
+++ b/PSS/wwwroot/css/AlbumsMain.css
@@ -18,11 +18,16 @@
 
 /* Div containing album name and thumbnail */
 #mainDiv > .album {
+    position: relative;
     background-color: darkslategrey;
     margin-bottom: 15px;
     margin-left: 25px;
     display: flex;
     flex-direction: column;
+}
+
+#mainDiv > .album:hover {
+    cursor: pointer;
 }
 
 /* Div containing img and 3 dots button */
@@ -33,11 +38,32 @@
     background-color: darkblue;
 }
 
-#mainDiv > .album > .thumbnail > img {
+.thumbnail > img {
     border-radius: 4px;
     object-fit: cover;
     width: 230px;
     height: 230px;
+}
+
+.thumbnail .dotsBtn {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    color: white;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border: none;
+    background: none;
+}
+
+.dotsBtn span {
+    text-align: center;
+}
+
+.thumbnail > .dotsBtn:hover {
+    background-color: rgba(211, 211, 211, 0.1);
+    cursor: pointer;
 }
 
 #mainDiv > .album > .albumName {
