--- a/PSS/wwwroot/css/AlbumsMain.css
+++ b/PSS/wwwroot/css/AlbumsMain.css
@@ -30,6 +30,11 @@
     cursor: pointer;
 }
 
+#mainDiv > .album:hover > .thumbnail > .dotsBtn {
+    opacity: 1;
+    transition: all .3s cubic-bezier(0,0,.2,1);
+}
+
 /* Div containing img and 3 dots button */
 #mainDiv > .album > .thumbnail {
     margin: 0;
@@ -46,9 +51,10 @@
 }
 
 .thumbnail .dotsBtn {
+    opacity: 0;
     position: absolute;
-    top: 4px;
-    right: 4px;
+    top: 2px;
+    right: 3px;
     color: white;
     border-radius: 50%;
     width: 50px;
