--- a/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/wwwroot/css/UploadApply.css
@@ -44,7 +44,7 @@ button span ~ span {
     text-decoration: none;
 }
 
-header input[type="text"] {
+header > input[type="text"] {
     margin-top: 12px;
     margin-left: 0;
     width: 200px;
