--- a/PSS/Pages/AlbumsMain.razor
+++ b/PSS/Pages/AlbumsMain.razor
@@ -8,22 +8,22 @@
     <button @onclick="NewAlbumBtnClick" id="@newAlbumBtnId"><span class="material-icons-outlined">@newAlbumBtnIcon</span><span class="btnText">@newAlbumBtnText</span></button>
     <input type="text" placeholder="Enter new album name" @bind="newAlbumName" style="display: @albumInputDisplay"/>
     <button @onclick="ConfirmBtnClick" style="display: @confirmBtnDisplay" id="confirmBtn"><span class="material-icons-outlined">check</span><span class="btnText">Confirm</span></button>
-    <button id="sortBtn" @onclick="SortBtnClick"><span class="material-icons-outlined">sort</span><span class="btnText">@sortBtnText</span></button>
+    <button id="sortBtn"><span class="material-icons-outlined">sort</span><span class="btnText">@sortBtnText</span></button>
 
     <div id="sortDiv"> @* This is ugly but I think it works well *@
-        <button @onclick="@(() => mode = SortMode.Title)">
+        <button @onclick="@(() => ChangeOrder(SortMode.Title))">
             <span class="material-icons-outlined" style="@(mode == SortMode.Title ? "color: #1a73e8" : "visibility: hidden")">check</span>
             <span class="btnText" style="color: @(mode == SortMode.Title ? "#1a73e8" : "white")">Album Title</span>
         </button>
-        <button @onclick="@(() => mode = SortMode.TitleReversed)">
+        <button @onclick="@(() => ChangeOrder(SortMode.TitleReversed))">
             <span class="material-icons-outlined" style="@(mode == SortMode.TitleReversed ? "color: #1a73e8" : "visibility: hidden")">check</span>
             <span class="btnText" style="color: @(mode == SortMode.TitleReversed ? "#1a73e8" : "white")">Album Title Reversed</span>
         </button>
-        <button @onclick="@(() => mode = SortMode.LastModified)">
+        <button @onclick="@(() => ChangeOrder(SortMode.LastModified))">
             <span class="material-icons-outlined" style="@(mode == SortMode.LastModified ? "color: #1a73e8" : "visibility: hidden")">check</span>
             <span class="btnText" style="color: @(mode == SortMode.LastModified ? "#1a73e8" : "white")">Last Modified</span>
         </button>
-        <button @onclick="@(() => mode = SortMode.LastModifiedReversed)">
+        <button @onclick="@(() => ChangeOrder(SortMode.LastModifiedReversed))">
             <span class="material-icons-outlined" style="@(mode == SortMode.LastModifiedReversed ? "color: #1a73e8" : "visibility: hidden")">check</span>
             <span class="btnText" style="color: @(mode == SortMode.LastModifiedReversed ? "#1a73e8" : "white")">Last Modified Reversed</span>
         </button>
@@ -55,17 +55,9 @@
     private static string sortBtnText;
     private static SortMode mode;
 
-    private enum SortMode
-    {
-        Title,
-        TitleReversed,
-        LastModified,
-        LastModifiedReversed
-    }
-
     protected override void OnInitialized()
     {
-        albums = GetAlbumsTable();
+        albums = GetAlbumsTable(mode);
         newAlbumBtnIcon = "library_add";
         newAlbumBtnText = "New Album";
         newAlbumBtnId = "newAlbumBtn";
@@ -103,13 +95,11 @@
         albumInputDisplay = "none";
         confirmBtnDisplay = "none";
 
-    //TODO: test for "" and duplicate album name on input...
+        //TODO: test for "" and duplicate album name on input...
         CreateAlbum(newAlbumName);
-        albums = GetAlbumsTable();
+        albums = GetAlbumsTable(mode);
         newAlbumName = ""; //Reset for next time
     }
 
-    private static void SortBtnClick()
-    {
-    }
+    private static void ChangeOrder(SortMode newMode) => albums = GetAlbumsTable(mode = newMode);
 }
