change default sort mode

--- a/PSS/Pages/AlbumsMain.razor
+++ b/PSS/Pages/AlbumsMain.razor
@@ -66,7 +66,7 @@
         confirmBtnDisplay = "none";
         SetSortBtnText();
         sortDivVis = "hidden";
-        mode = SortMode.Title; //Default sort mode
+        mode = SortMode.LastModified; //Default sort mode
     }
 
     private static void NewAlbumBtnClick()
