--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -3,7 +3,108 @@
 
 <link href="css/AlbumView.css" rel="stylesheet">
 
+@{
+    <header style="visibility: @headerVis">
+        <button><span class="material-icons-outlined">more_vert</span></button>
+        <button title="Delete Selected" @onclick="DeleteBtnClick"><svg width="24px" height="24px" class="material-icons" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
+        <button title="Remove Selected"><span class="material-icons-outlined">remove</span></button>
+        <button title="Star Selected"><span class="material-icons-outlined">star_outline</span></button>
+        <button title="Add Selected to Album" @onclick="AlbumBtnClick"><span class="material-icons-outlined">library_add</span></button>
+        <span id="selectedAmtText" style="visibility: @headerVis">@selectedItems.Count selected</span>
+        <button id="clearBtn" @onclick="ClearChecks"><span class="material-icons-outlined">close</span></button>
+    </header>
+    
+    if (albumMedia.Count == 0)
+    {
+        <h1>Album is empty</h1>
+    }
+    else
+    {
+        <div id="mainDiv">
+            @foreach (MediaRow media in albumMedia)
+            {
+                <div class="thumbnail">
+                    <span @onclick="(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
+                    <img style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
+                </div>
+            }
+         </div>
+    }
+}
+
 @code {
     [Parameter]
     public string albumID { get; set; }
+
+    private static string headerVis;
+    private static string albumsVis;
+    private static List<MediaRow> albumMedia;
+    private static List<string> selectedItems;
+
+    protected override void OnInitialized()
+    {
+        albumMedia = LoadAlbum(Int32.Parse(albumID));
+        selectedItems = new List<string>(); //Reset on page load/refresh
+    }
+
+    [Inject]
+    public IJSRuntime JSRuntime { get; set; }
+
+    private async Task ToggleCheck(string id) //id = string path
+    {
+        string newClass = await JSRuntime.InvokeAsync<string>("toggleCheck", id);
+        if (newClass.Contains("unchecked"))
+            selectedItems.Remove(id);
+        else
+            selectedItems.Add(id);
+
+        // headerVis = selectedItems.Count > 0 ? "visible" : "hidden";
+    }
+    
+    private async Task ClearChecks()
+    {
+        foreach (string item in selectedItems)
+            await JSRuntime.InvokeAsync<string>("removeCheck", item);
+        selectedItems.Clear();
+        headerVis = "hidden";
+        albumsVis = "hidden";
+    }
+    
+    //Move selected stuff to trash tables and move to trash folder on server
+    private async Task DeleteBtnClick()
+    {
+        foreach (string path in selectedItems.ToList()) //https://stackoverflow.com/a/604843
+        {
+            MoveToTrash(path);
+            headerVis = "hidden";
+        }
+        await ClearChecks();
+        // mediaList = LoadMediaTable();
+    }
+
+    //Functions for album stuff
+    private static void AlbumBtnClick() => albumsVis = "visible";
+ 
+    private static void CloseBtnClick()
+    {
+        albumsVis = "hidden";
+        // for (int index = 0; index < checkedAlbums.Count; index++) checkedAlbums[index] = false;
+    }
+
+    //Add item(s) to album(s) selected.
+    private async Task ConfirmBtnClick()
+    {
+        // for (int c = 0; c < checkedAlbums.Count; c++)
+        // {
+            // if (checkedAlbums[c] == false) continue;
+
+            // foreach (string item in selectedItems)
+            // {
+                // AddToAlbum(item, albums[c].id);
+            // }
+        // }
+        // CloseBtnClick();
+        // headerVis = "hidden";
+        await ClearChecks();
+    }
 }
