--- a/PSS/wwwroot/css/AlbumView.css
+++ b/PSS/wwwroot/css/AlbumView.css
@@ -92,8 +92,11 @@ button span ~ span, button svg ~ span {
 }
 
 #albumNameDiv {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     position: absolute;
-    /*background-color: red;*/
+    background-color: red;
     width: 100%;
     height: 100px;
     left: 146px;
@@ -103,19 +106,20 @@ button span ~ span, button svg ~ span {
 #albumNameDiv > input[type="text"] {
     color: white;
     background-color: black;
-    position: absolute;
-    top: 30px;
-    left: 100px;
-    border: none;
-    outline: 1px solid black;
+    border: 2px solid black;
+    font-size: 32px;
+    outline: none;
+    width: 50%;
+    margin-left: 60px;
 }
 
 #albumNameDiv > input[type="text"]:hover {
-    border-bottom: 1px solid #dadce0;
+    border-bottom: 2px solid #dadce0;
 }
 
 #albumNameDiv > input[type="text"]:focus {
-    border-bottom: 1px solid #4285f4;
+    border-bottom: 2px solid #4285f4;
+    transition: all .3s cubic-bezier(.4,0,.2,1);
 }
 
 #mainDiv {
